--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "nodemon": "^2.0.6"
   },
   "_moduleAliases": {
-    "@root": ".",
     "@app": "./src/app.js",
-    "@config": "./src/config",
-    "@controllers": "./src/controllers",
-    "@routes": "./src/routes.js"
+    "@routes": "./src/routes.js",
+    "@Root": ".",
+    "@Config": "./src/config",
+    "@Controllers": "./src/controllers",
+    "@Services": "./src/services"
   },
   "scripts": {
     "dev": "nodemon server.js"
