--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "pg": "^8.4.2",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
@@ -21,6 +24,6 @@
     "@services": "./src/services"
   },
   "scripts": {
-    "dev": "nodemon -q server"
+    "dev": "nodemon server"
   }
 }
