Configuraçao do sequelize-cli

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "sequelize-cli": "^6.2.0"
   },
   "_moduleAliases": {
     "@app": "./src/app.js",
