--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,22 @@
-port=
-dbconnection=
+PORT=
+
+DEV_DB_CONN=
+DEV_DB_USERNAME=
+DEV_DB_PASS=
+DEV_DB_DATABASE=
+DEV_DB_HOST=
+DEV_DB_DIALECT=
+
+TEST_DB_CONN=
+TEST_DB_USERNAME=
+TEST_DB_PASS=
+TEST_DB_DATABASE=
+TEST_DB_HOST=
+TEST_DB_DIALECT=
+
+PROD_DB_CONN=
+PROD_DB_USERNAME=
+PROD_DB_PASS=
+PROD_DB_DATABASE=
+PROD_DB_HOST=
+PROD_DB_DIALECT=
